Classpath for litle

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     },
     "require": {
 
+    },
+    "autoload": {
+        "classpath": [
+            "lib/LitleOnline.php"
+        ]
     }
 }
