fix: updating package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nkrantz/litle-sdk-for-php",
+    "name": "phido-eng/litle-sdk",
     "description": "Modified litle sdk for PHP",
     "authors": [
         {
