--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,7 @@
         }
     ],
     "version": "dev-master",
-    "source": {
-        "url": "git://github.com/nkrantz23/litle-sdk-for-php",
-        "type": "git",
-        "reference": "master"
-    },
-    "require": {
-
-    },
+    "require": {},
     "autoload": {
         "files": [
             "lib/LitleOnline.php"
